--- a/index.html
+++ b/index.html
@@ -305,10 +305,10 @@ I think Gary Shteyngart is funny.
 <p><b>2021</b></p>
 
 <p>
-"MeetDot: Videoconferencing with Live Translation Captions" (A. Arkhangorodsky, C. Chu, S. Fang, Y. Huang, D. Jiang, A. Nagesh, B. Zhang, and K. Knight), Proc. EMNLP Demo Track (2021).
+"MeetDot: Videoconferencing with Live Translation Captions" (A. Arkhangorodsky, C. Chu, S. Fang, Y. Huang, D. Jiang, A. Nagesh, B. Zhang, and K. Knight), Proc. EMNLP System Demonstrations (2021).
 
 <p>
-"Learning Mathematical Properties of Integers" (M. Ryskina and K. Knight), Proc. 4th BlackboxNLP Workshop, EMNLP (2021).
+"Learning Mathematical Properties of Integers" (M. Ryskina and K. Knight), Proc. EMNLP BlackboxNLP Workshop (2021).
 
 <!-- 
 <p>
