--- a/index.html
+++ b/index.html
@@ -305,10 +305,10 @@ I think Gary Shteyngart is funny.
 <p><b>2021</b></p>
 
 <p>
-"MeetDot: Videoconferencing with Live Translation Captions" (A. Arkhangorodsky, C. Chu, S. Fang, Y. Huang, D. Jiang, A. Nagesh, B. Zhang, and K. Knight), Proc. EMNLP System Demonstrations (2021).
+"MeetDot: Videoconferencing with Live Translation Captions" (A. Arkhangorodsky, C. Chu, S. Fang, Y. Huang, D. Jiang, A. Nagesh, B. Zhang, and K. Knight), Proc. EMNLP System Demonstrations, 2021.
 
 <p>
-"Learning Mathematical Properties of Integers" (M. Ryskina and K. Knight), Proc. EMNLP BlackboxNLP Workshop (2021).
+"Learning Mathematical Properties of Integers" (M. Ryskina and K. Knight), Proc. EMNLP BlackboxNLP Workshop, 2021.
 
 <!-- 
 <p>
@@ -323,7 +323,7 @@ I think Gary Shteyngart is funny.
 Preprint. <a href="https://arxiv.org/abs/2010.04747">Get paper on arXiv.</a>
 
 <p>
-"MUSE: Textual Attributes Guided Portrait Painting Generation" (X. Hu, P. Yu, K. Knight, H. Ji, B. Li, and H. Shi), Proc. 3rd IEEE Workshop on Artificial Intelligence for Art Creation (2021).  <a href="https://arxiv.org/abs/2011.04761">Get paper in PDF.</a>  
+"MUSE: Textual Attributes Guided Portrait Painting Generation" (X. Hu, P. Yu, K. Knight, H. Ji, B. Li, and H. Shi), Proc. 3rd IEEE Workshop on Artificial Intelligence for Art Creation,2021.  <a href="https://arxiv.org/abs/2011.04761">Get paper in PDF.</a>  
 
 <p>
 "A Hybrid Task-Oriented Dialog System with Domain and 
