--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ document.write("kevin.crawfor"+"d.knight@gm"+"ail.com")
 
 <p>
 Chief Scientist for Natural Language Processing at 
-<a href="http://www.wired.co.uk/article/didi-chuxing-china-startups-uber">Didi Chuxing</a>. 
+<a href="http://www.wired.co.uk/article/didi-chuxing-china-startups-uber">Didi Global</a>. 
 
 <P>
 Research interests include: artificial intelligence, natural language 
