--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@ I think Gary Shteyngart is funny.
 
 <p>
 "Learning Mathematical Properties of Integers" (M. Ryskina and K. Knight), Proc. EMNLP BlackboxNLP Workshop, 2021.
+<a href="https://arxiv.org/abs/2109.07230">Get paper in PDF.</a>
 
 <!-- 
 <p>
