--- a/index.html
+++ b/index.html
@@ -314,11 +314,11 @@ I think Gary Shteyngart is funny.
 -->
 
 <p>
-"Why Neural Machine Translation Prefers Empty Outputs" (X. Shi, Y. Xiao, and K. Knight). Preprint. <a href="https://arxiv.org/abs/2012.13454">Get paper on arXiv.</a>
+"Why Neural Machine Translation Prefers Empty Outputs" (X. Shi, Y. Xiao, and K. Knight). <a href="https://arxiv.org/abs/2012.13454">Get preprint on arXiv.</a>
 
 <p>
 "MEEP: An Open-Source Platform for Human-Human Dialog Collection and End-to-End Agent Training" (A. Arkhangorodsky, A. Axelrod, C. Chu, S. Fang, Y. Huang, A. Nagesh, X. Shi, B. Zhang, K. Knight).
-Preprint. <a href="https://arxiv.org/abs/2010.04747">Get paper on arXiv.</a>
+<a href="https://arxiv.org/abs/2010.04747">Get preprint on arXiv.</a>
 
 <p>
 "MUSE: Textual Attributes Guided Portrait Painting Generation" (X. Hu, P. Yu, K. Knight, H. Ji, B. Li, and H. Shi), Proc. 3rd IEEE Workshop on Artificial Intelligence for Art Creation,2021.  <a href="https://arxiv.org/abs/2011.04761">Get paper in PDF.</a>  
