--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ processing, machine translation, dialog processing, automata theory, deciphermen
 
 <P>
 Prior to joining DiDi, I spent many years working as a professor in the
-<A HREF="http://cwis.usc.edu/dept/cs/">Department of Computer Science</A>
+<A HREF="http://cs.usc.edu">Department of Computer Science</A>
 of the <A HREF="extra/usc-ball.jpg"> University of Southern California</A>.
 </P>
 
