--- a/index.html
+++ b/index.html
@@ -303,16 +303,14 @@ I think Gary Shteyngart is funny.
 
 <p>
 "MeetDot: Videoconferencing with Live Translation Captions" (A. Arkhangorodsky, C. Chu, S. Fang, Y. Huang, D. Jiang, A. Nagesh, B. Zhang, and K. Knight), Proc. EMNLP System Demonstrations, 2021.
+<a href="https://arxiv.org/abs/2109.09577">Get paper in PDF.</a>
 
 <p>
 "Learning Mathematical Properties of Integers" (M. Ryskina and K. Knight), Proc. EMNLP BlackboxNLP Workshop, 2021.
 <a href="https://arxiv.org/abs/2109.07230">Get paper in PDF.</a>
 
-<!-- 
 <p>
-"Two Approaches to Building Collaborative, Task-Oriented Dialog Agents through Self-Play" (A. Arkhangorodsky, S. Fang, V. Knight, A. Nagesh, M. Ryskina, K. Knight).  Preprint.  <a href="???">Get paper in PDF.</a>
--->
-
+"Two Approaches to Building Collaborative, Task-Oriented Dialog Agents through Self-Play" (A. Arkhangorodsky, S. Fang, V. Knight, A. Nagesh, M. Ryskina, K. Knight).  Preprint.  <a href="https://arxiv.org/pdf/2109.09597">Get paper in PDF.</a>
 
 <p>
 "MUSE: Textual Attributes Guided Portrait Painting Generation" (X. Hu, P. Yu, K. Knight, H. Ji, B. Li, and H. Shi), Proc. 3rd IEEE Workshop on Artificial Intelligence for Art Creation,2021.  <a href="https://arxiv.org/abs/2011.04761">Get paper in PDF.</a>  
