--- a/index.html
+++ b/index.html
@@ -310,9 +310,6 @@ I think Gary Shteyngart is funny.
 <a href="https://arxiv.org/abs/2109.07230">Get paper in PDF.</a>
 
 <p>
-"Two Approaches to Building Collaborative, Task-Oriented Dialog Agents through Self-Play" (A. Arkhangorodsky, S. Fang, V. Knight, A. Nagesh, M. Ryskina, K. Knight).  Preprint.  <a href="https://arxiv.org/pdf/2109.09597">Get paper in PDF.</a>
-
-<p>
 "MUSE: Textual Attributes Guided Portrait Painting Generation" (X. Hu, P. Yu, K. Knight, H. Ji, B. Li, and H. Shi), Proc. 3rd IEEE Workshop on Artificial Intelligence for Art Creation,2021.  <a href="https://arxiv.org/abs/2011.04761">Get paper in PDF.</a>  
 
 <p>
@@ -322,11 +319,14 @@ Z. Jia, K. Han, and K. Knight), Proc. DSTC9 Workshop (AAAI), 2021.
 <A HREF="https://arxiv.org/pdf/2102.04506.pdf">Get paper in PDF</A>.
 
 <p>
-"Why Neural Machine Translation Prefers Empty Outputs" (X. Shi, Y. Xiao, and K. Knight). <a href="https://arxiv.org/abs/2012.13454">Get preprint on arXiv.</a>
+"Why Neural Machine Translation Prefers Empty Outputs" (X. Shi, Y. Xiao, and K. Knight). <a href="https://arxiv.org/abs/2012.13454">Get preprint.</a>
 
 <p>
 "MEEP: An Open-Source Platform for Human-Human Dialog Collection and End-to-End Agent Training" (A. Arkhangorodsky, A. Axelrod, C. Chu, S. Fang, Y. Huang, A. Nagesh, X. Shi, B. Zhang, K. Knight).
-<a href="https://arxiv.org/abs/2010.04747">Get preprint on arXiv.</a>
+<a href="https://arxiv.org/abs/2010.04747">Get preprint.</a>
+
+<p>
+"Two Approaches to Building Collaborative, Task-Oriented Dialog Agents through Self-Play" (A. Arkhangorodsky, S. Fang, V. Knight, A. Nagesh, M. Ryskina, K. Knight).  <a href="https://arxiv.org/abs/2109.09597">Get preprint.</a>
 
 <p><b>2020</b></p>
 
