--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ vita</A>.
 </P>
 
 <p>
-Let's solve the <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE">3n+1</a> problem!
+Let's solve the <a href="https://www.youtube.com/watch?v=PzFIg41Igqs&t=2s">3n+1</a> problem!
 </p>
 
 <p>
