Update index.html alexa

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@ summary</A>.
 <p>
 We made a nice site about <A HREF="https://chinesenlp.xyz">Chinese NLP</A>!
 </p>
+ 
+<p>
+ <A HREF="alexa-and-moxie-talking.MP4">Alexa talking to Moxie</A>.
+ </p>
 
 <p>
 Cryptography consultant, <a href="https://en.wikipedia.org/wiki/Under_the_Silver_Lake">Under the Silver Lake</a> (2019).
