--- a/inexplicably.html
+++ b/inexplicably.html
@@ -14,16 +14,16 @@ Amicably welcoming him in."
 I didn't win any prize money. Which seems fair. But a couple decades later, I remembered it, and I Googled it. So many hits. Speech practice for actors, tongue-twisters, viral TikToks. Too funny!
 
 <p>
-<A HREF="">https://www.youtube.com/watch?v=IjEPUSJcnGA</A>
-<br><A HREF="">https://www.youtube.com/watch?v=bL7Tgvbvn5I</A>
-<br><A HREF="">https://www.youtube.com/watch?v=AutT-srVJMQ</A>
-<br><A HREF="">https://www.youtube.com/watch?v=CvB1rKNb2LA&t=80s</A>
-<br><A HREF="">https://www.youtube.com/watch?v=jzWTxUIIUR4&t=16s</A>
-<br><A HREF="">https://www.youtube.com/watch?v=BUfAraEEMdc&t=197s</A>
-<br><A HREF="">https://youtu.be/awUfUYkwydE?t=297</A>
-<br><A HREF="">https://youtu.be/WPGD4pxBjBw?t=8</A>
-<br><A HREF="">https://youtu.be/E9vvsWBpcEY?t=27</A>
-<br><A HREF="">https://youtu.be/8sQoYa8TptI?t=78</A>
+<A HREF="https://www.youtube.com/watch?v=IjEPUSJcnGA">https://www.youtube.com/watch?v=IjEPUSJcnGA</A>
+<br><A HREF="https://www.youtube.com/watch?v=bL7Tgvbvn5I">https://www.youtube.com/watch?v=bL7Tgvbvn5I</A>
+<br><A HREF="https://www.youtube.com/watch?v=AutT-srVJMQ">https://www.youtube.com/watch?v=AutT-srVJMQ</A>
+<br><A HREF="https://www.youtube.com/watch?v=CvB1rKNb2LA&t=80s">https://www.youtube.com/watch?v=CvB1rKNb2LA&t=80s</A>
+<br><A HREF="https://www.youtube.com/watch?v=jzWTxUIIUR4&t=16s">https://www.youtube.com/watch?v=jzWTxUIIUR4&t=16s</A>
+<br><A HREF="https://www.youtube.com/watch?v=BUfAraEEMdc&t=197s">https://www.youtube.com/watch?v=BUfAraEEMdc&t=197s</A>
+<br><A HREF="https://youtu.be/awUfUYkwydE?t=297">https://youtu.be/awUfUYkwydE?t=297</A>
+<br><A HREF="https://youtu.be/WPGD4pxBjBw?t=8">https://youtu.be/WPGD4pxBjBw?t=8</A>
+<br><A HREF="https://youtu.be/E9vvsWBpcEY?t=27">https://youtu.be/E9vvsWBpcEY?t=27</A>
+<br><A HREF="https://youtu.be/8sQoYa8TptI?t=78">https://youtu.be/8sQoYa8TptI?t=78</A>
 <br>
 ...
 <br>
