--- a/index.html
+++ b/index.html
@@ -67,10 +67,16 @@ summary</A>.
 We made a nice site about <A HREF="https://chinesenlp.xyz">Chinese NLP</A>!
 </p>
  
-<p>
+<IMG SRC="extra/new-en.gif">
+ <p>
  <A HREF="alexa-and-moxie-talking.MP4">Alexa talking to Moxie</A>.
  </p>
 
+ <IMG SRC="extra/new-en.gif">
+  <p>
+  <A HREF="inexplicably.html">An amicable story</A>.
+ </p>
+ 
 <p>
 Cryptography consultant, <a href="https://en.wikipedia.org/wiki/Under_the_Silver_Lake">Under the Silver Lake</a> (2019).
 
