--- a/inexplicably.html
+++ b/inexplicably.html
@@ -12,7 +12,16 @@ Inexplicably mimicking his hiccupping,
 Amicably welcoming him in."
 
 <p>
-I didn't win any prize money. Which seems fair. But a couple decades later, I remembered it, and I Googled it. So many hits. Speech practice for actors, tongue-twisters, viral TikToks. Too funny!
+I didn't win any prize money. Which seems fair. 
+
+<p>
+But I Googled it a couple decades later. So many hits. 
+
+<p>
+Speech practice for actors, tongue-twisters, viral TikToks. 
+
+<p>
+Too funny!
 
 <p>
 <A HREF="https://www.youtube.com/watch?v=IjEPUSJcnGA">https://www.youtube.com/watch?v=IjEPUSJcnGA</A>
