--- a/inexplicably.html
+++ b/inexplicably.html
@@ -2,7 +2,7 @@
 
 <p>
   <p>
-Back in 2001, I entered the annual Writing Contest held by my local Hermosa Beach newspaper (the "Easy Reader").  I submitted this original poem:
+Back in 2001, I entered the annual Writing Contest held by my local Hermosa Beach, California newspaper (the "Easy Reader").  I submitted this original poem:
 
 <p>
 "She stood on the balcony,
@@ -12,13 +12,16 @@ Inexplicably mimicking his hiccupping,
 Amicably welcoming him in."
 
 <p>
-I didn't win any prize money. Which seems fair. 
+I didn't win any prize money, which seems fair.  I must have had a lot of time on my hands.
 
 <p>
-But I Googled it a couple decades later. So many hits. 
+But I Googled it a couple decades later. 
 
 <p>
-Speech practice for actors, tongue-twisters, viral TikToks. 
+So many hits. 
+
+<p>
+Speech practice for actors, tongue-twisters, viral TikToks...
 
 <p>
 Too funny!
