--- a/index.html
+++ b/index.html
@@ -174,7 +174,9 @@ Listen to the rhythmic
 I think our approach to syntax in machine translation is best
 described in D. Barthelme's short story 
 <A HREF="extra/more-structure2.html">
-They called for more structure...</A>.
+They called for more structure...</A>.  
+<A HREF="extra/brazilia.gif">Explanation 1.</A>
+ <A HREF="https://languagelog.ldc.upenn.edu/nll/?p=17854#comment-1491317">Explanation 2?</A>
 
 <P> <A HREF="extra/haiku-vogler.html">Haiku Vogler</A>.
 <A HREF="pictures/haiku-vogler-painting.jpg">
