--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ on syntax-structuring for translation, and
 on the West Bank</A>.  No matter how readers interpret the text,
 my favorite part is still where the baby throws up on the mom.
 And here's a gruesome
-<A HREF="extra/europe.pdf">fairy tale</A> for you.
+<A HREF="extra/bugs-web.pdf">fairy tale</A> for you.
 
 <p> Here is a 
 <a href="extra/Think.mpg">slide show</a> 
