--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ My <A HREF="pictures2/my-busy-robot.mp4">busy robot</a>.
 
 <p>
 We built an
-<a href="http://amr.isi.edu">AMR semantics bank</a>.  It's like a treebank, but for
+ <a href="http://amr.isi.edu">AMR semantics bank</a>.  It's like a treebank, <A HREF="https://en.wikipedia.org/wiki/Lock-up_period">but</A> for
 <A HREF="extra/arresting.pdf">semantics</a>.
 
 <p>
