--- a/index.html
+++ b/index.html
@@ -22,29 +22,10 @@ document.write("kevin.crawfor"+"d.knight@gm"+"ail.com")
 </script>
 </P>
 
-<p>
-Chief Scientist for Natural Language Processing at 
-<a href="http://www.wired.co.uk/article/didi-chuxing-china-startups-uber">Didi Global</a>. 
-
 <P>
 Research interests include: artificial intelligence, natural language 
 processing, machine translation, dialog processing, automata theory, decipherment.
 </P>
-
-<!-- 
-<p>
-<IMG SRC="extra/new-en.gif">
-<a href="https://jobs.lever.co/didi-global/3ac2694b-846b-431b-a62b-93f584534150">Now hiring</a> at DiDi Labs in Los Angeles! 
--->
- 
-<P>
-Prior to joining DiDi, I spent many years working as a professor in the
-<A HREF="http://cs.usc.edu">Department of Computer Science</A>
-of the <A HREF="extra/usc-ball.jpg"> University of Southern California</A>.
-</P>
-
-<p>
-Chief Scientist, <a href="https://specif.io">Specifio</a>.
 
 <P>
 My <a href="#pubs">publications</a>.
@@ -56,8 +37,6 @@ vita</A>.
 Let's solve the <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE">3n+1</a> problem!
 </p>
 
-<p>
-We recently organized a <a href="http://www.statmt.org/wmt21/triangular-mt-task.html">Russian/Chinese common MT evaluation</a>.  
 
 <p>
 If you don't want to read this whole page, here's a quick
@@ -67,15 +46,21 @@ summary</A>.
 
 <p>
 We made a nice site about <A HREF="https://chinesenlp.xyz">Chinese NLP</A>!
+We also co-organized a 
+ <a href="http://www.statmt.org/wmt21/triangular-mt-task.html">Russian/Chinese common MT evaluation</a>.  
 </p>
- 
- <p>
- <A HREF="alexa-and-moxie-talking.MP4">Alexa talking to Moxie</A>.
- </p>
 
-  <p>
-  <A HREF="inexplicably.html">An amicable story</A>.
- </p>
+<p>
+Co-organized IWSLT 2020, co-Program Chair of First <a href="http://aacl2020.org/">Asia-Pacific ACL 2020</a>, co-Program Chair of CCMT 2019 (China Conference on Machine Translation), co-General Chair of CCF-ICAI 2019 (CCF International Conference on Artificial Intelligence).
+</p> 
+ 
+<p>
+<A HREF="alexa-and-moxie-talking.MP4">Alexa talking to Moxie</A>.
+</p>
+
+<p>
+<A HREF="inexplicably.html">An amicable story</A>.
+</p>
  
 <p>
 Cryptography consultant, <a href="https://en.wikipedia.org/wiki/Under_the_Silver_Lake">Under the Silver Lake</a> (2019).
@@ -84,33 +69,11 @@ Cryptography consultant, <a href="https://en.wikipedia.org/wiki/Under_the_Silver
 Co-inventor on a 2019 <a href="https://bit.ly/2kS9nX5">US patent</a> about software that writes patents, written by software that writes patents.
 
 <p>
-Co-organized IWSLT 2020, co-Program Chair of First <a href="http://aacl2020.org/">Asia-Pacific ACL 2020</a>, co-Program Chair of CCMT 2019 (China Conference on Machine Translation), co-General Chair of CCF-ICAI 2019 (CCF International Conference on Artificial Intelligence).
-</p>
-
-
-<!-- 
-<p>
-<IMG SRC="extra/new-en.gif"> 
-Enter the <a href="china-apps.html">World of Chinese Apps</a>.
--->
-
-<p>
-You're wondering why I got <a href="fried.html">fried</a>?
-
-<p>
 Say <a href="http://www.history.com/shows/the-hunt-for-the-zodiac-killer">what</a>?  Don't let <a href="http://www.history.com/news/this-supercomputer-was-programmed-to-think-like-the-zodiac-killer">him</a> cash you outside.
-
 
 <p> I put together a long-running 
 <A HREF="http://nlg.isi.edu/nl-seminar/">natural language seminar</a>.
 Here are the <A HREF="extra/seminar-how-to.pdf">guidelines</a>.
-
-
-<!--
-<p>
-Make poems <a href="http://hafez.rocks:4000/poem/">here</a>.
--->
-
 
 <p>
 If I could change my profession, I would like to try naval attach&eacute.
@@ -133,7 +96,7 @@ and
 <A HREF="extra/den1.mp4">lightning</a> 
 in Denver.
 
-<p>Just your average <A HREF="pictures/creepy-face.jpg">face</A>.  Send bug reports to <a href="http://static.googleusercontent.com/media/research.google.com/en/us/archive/unsupervised_icml2012.pdf">Google</a>.
+<p>Just your average <A HREF="pictures/creepy-face.jpg">face</A>.  Bug reports to <a href="http://static.googleusercontent.com/media/research.google.com/en/us/archive/unsupervised_icml2012.pdf">Google</a>.
 
 <p> 
 Bayesian Inference with Tears:
@@ -143,26 +106,6 @@ Bayesian Inference with Tears:
 </p>
 
 <p>Here's a bunch of <a href="http://www.isi.edu/projects/nlg/software_1">ISI NLP software</a>. 
-
-<!--
-You can also download
-<A HREF="http://www.isi.edu/licensed-sw/tiburon">Tiburon</A>,
-a tree toolkit developed by 
-<a href="http://www.isi.edu/~jonmay">Jonathan May</a>.  Check it out.
-You can also download Jonathan Graehl's very fine 
-finite-state string toolkit 
-<A HREF="http://www.isi.edu/licensed-sw/carmel">Carmel</A>
-(<a href="https://github.com/isi-nlp/carmel">Github</a>).
-See this
-<A HREF="http://www.isi.edu/licensed-sw/carmel/carmel-training.pdf">training manual</A> 
-for a description of software that implements a generic form of Bayesian
-learning for finite-state machines.
-</P>
-
-<p>
-<IMG SRC="extra/new-en.gif">
-Yes!  Finally on a <a href="http://www.history.com/shows/the-curse-of-oak-island/season-4/episode-13">reality show</a>.
--->
 
 <p>
 Listen to the rhythmic 
@@ -176,7 +119,7 @@ described in D. Barthelme's short story
 <A HREF="extra/more-structure2.html">
 They called for more structure...</A>.  
 <A HREF="extra/brazilia.jpg">Explanation 1.</A>
- <A HREF="https://languagelog.ldc.upenn.edu/nll/?p=17854#comment-1491317">Explanation 2?</A>
+<A HREF="https://languagelog.ldc.upenn.edu/nll/?p=17854#comment-1491317">Explanation 2?!</A>
 
 <P> <A HREF="extra/haiku-vogler.html">Haiku Vogler</A>.
 <A HREF="pictures/haiku-vogler-painting.jpg">
@@ -193,23 +136,6 @@ I am literally begging you to do more random restarts.
 Check out these slides from my 
 <a href="extra/acl-tutorial-13-decipher-final.pdf">
 ACL 2013 Decipherment Tutorial</a>.  
-
-<!--
-<P>
-Here's a paraphrase corpus aligned
-by Tagyoung Chung.  Two translations of "20,000 Leagues Under
-the Sea" are manually matched up at the paragraph level.
-<A HREF="extra/20k1.txt">
-Corpus 1</A>.
-<A HREF="extra/20k2.txt">
-Corpus 2</A>.
-<A HREF="extra/goldstandard.txt">
-Correspondences</A>.
-
-<p> I taught USC's <a HREF="extra/CS662_syllabus_fall_17.pdf">CS662</a>
-(Advanced Natural Language Processing, every fall). 
-We also ran a Scientific Communication workshop at ISI in the spring.
--->
 
 <p> I was asked to run for a position in my professional association.  
 A bogus <a HREF="extra/acl2.html">
@@ -254,12 +180,6 @@ on the West Bank</A>.  No matter how readers interpret the text,
 my favorite part is still where the baby throws up on the mom.
 And here's a gruesome
 <A HREF="extra/bugs-web.pdf">fairy tale</A> for you.
-
- <!-- 
-<p> Here is a 
-<a href="extra/Think.mpg">slide show</a> 
-that explains the global situation to American people.
--->
  
 <P> I'm possibly the least-skilled person at drawing ever to get paid for it,
 for example:
@@ -291,10 +211,9 @@ that is a god-danged good book.  Other favorites: A Scanner
 Darkly, Man in the High Castle, Confessions of a Crap Artist, Puttering 
 about in a Small Land, Now Wait for Last Year, The Penultimate Truth, 
 Ambient, Terraplane, Heathern, Elvissey, Random Acts of Senseless 
-Violence, and Let's Put the Future Behind Us.  
-I like also Don Delillo, 
-David Lodge, Kurt Vonnegut, and J. D. Salinger.  Seems like the first 
-couple of books are always better than all the rest.  
+Violence, Let's Put the Future Behind Us, Convenience Store Woman,
+and Sourdough. I also like Don Delillo, David Lodge, Kurt Vonnegut, and J. D. Salinger.  
+Seems like the first couple of books are always better than all the rest.  
 I like Bob Dylan's music and found his autobiography (Chronicles,
 Vol. 1) strangely similar Neil Armstrong's biography (First Man).  
 Other books: Tao Te Ching, and Benjamin Tucker's Instead of a Book.
