--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@ document.write("kevin.crawfor"+"d.knight@gm"+"ail.com")
 </script>
 </P>
 
+<p>
+Recent positions: Chief Scientist for NLP (Didi), Professor of Computer Science (USC).
+
 <P>
 Research interests include: artificial intelligence, natural language 
 processing, machine translation, dialog processing, automata theory, decipherment.
