Modifying the site

--- a/image-viewer-with-prev-and-next-buttons/index.html
+++ b/image-viewer-with-prev-and-next-buttons/index.html
@@ -33,27 +33,34 @@
               <div class="Scriptcontent">
               
  <!-- Start Image Viewer -->
+
+
+
+citizenfour.jpg
+creepy-face.jpg
+dsbaz.jpg
+haiku-vogler-painting.jpg
+robot.jpg
+translation-machine.jpg
+
                   <div class="snapper" data-snapper-nextprev>
       <div class="snapper_pane_crop">
       	<div class="snapper_pane">
       		<div class="snapper_items">
             <div class="snapper_item" id="img-a2">
-      				<img src="imgs/monkey.jpg" alt="">
+      				<img src="imgs/citizenfour.jpg" alt="">
       			</div>
-      			<div class="snapper_item" id="img-b2">
-      				<img src="imgs/large.jpg" alt="">
+    	    <div class="snapper_item" id="img-b2">
+      				<img src="imgs/creepy-face.jpg" alt="">
       			</div>
-      			<div class="snapper_item" id="img-c2">
-      				<img src="imgs/monks.jpg" alt="">
+            <div class="snapper_item" id="img-c2">
+      				<img src="imgs/dsbaz.jpg" alt="">
       			</div>
             <div class="snapper_item" id="img-d2">
-      				<img src="imgs/interior.jpg" alt="">
+      				<img src="imgs/robot.jpg" alt="">
       			</div>
-      			<div class="snapper_item" id="img-e2">
-      				<img src="imgs/cows.jpg" alt="">
-      			</div>
-            <div class="snapper_item" id="img-f2">
-      				<img src="imgs/bike.jpg" alt="">
+            <div class="snapper_item" id="img-e2">
+      				<img src="imgs/translation-machine.jpg" alt="">
       			</div>
       		</div>
       	</div>
@@ -95,3 +102,4 @@
 
 	</body>
 </html>
+
