--- a/image-viewer-with-prev-and-next-buttons/index.html
+++ b/image-viewer-with-prev-and-next-buttons/index.html
@@ -21,7 +21,7 @@
   </style>
     
     <!--Only for demo purpose - no need to add.-->
-    <link rel="stylesheet" href="demo.css" />
+    <link rel="stylesheet" href="demo2.css" />
         <!-- Snapper CSS -->
     <link rel="stylesheet" href="dist/snapper.css">
 	
