--- a/image-viewer-with-prev-and-next-buttons/index.html
+++ b/image-viewer-with-prev-and-next-buttons/index.html
@@ -35,26 +35,15 @@
               
  <!-- Start Image Viewer -->
 
-
     <div class="snapper" data-snapper-nextprev>
       <div class="snapper_pane_crop">
       	<div class="snapper_pane">
   	  <div class="snapper_items">
-            <div class="snapper_item" id="img-a2">
-      		<img src="imgs/citizenfour.jpg" alt="">
-      		</div>
-    	    <div class="snapper_item" id="img-b2">
-      		<img src="imgs/creepy-face.jpg" alt="">
-      		</div>
-            <div class="snapper_item" id="img-c2">
-      		<img src="imgs/dsbaz.jpg" alt="">
-      		</div>
-            <div class="snapper_item" id="img-d2">
-      		<img src="imgs/robot.jpg" alt="">
-      		</div>
-            <div class="snapper_item" id="img-e2">
-      		<img src="imgs/translation-machine.jpg" alt="">
-      		</div>
+            <div class="snapper_item" id="img-a2"> <img src="imgs/citizenfour.jpg" alt=""> </div>
+    	    <div class="snapper_item" id="img-b2"> <img src="imgs/creepy-face.jpg" alt=""> </div>
+            <div class="snapper_item" id="img-c2"> <img src="imgs/dsbaz.jpg" alt=""> </div>
+            <div class="snapper_item" id="img-d2"> <img src="imgs/robot.jpg" alt=""> </div>
+            <div class="snapper_item" id="img-e2"> <img src="imgs/translation-machine.jpg" alt=""> </div>
       	  </div>
       	</div>
       </div>
