--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <TITLE> Kevin Knight's home page </TITLE>
 <!-- Created by Kevin Knight, April 1995 -->
 
-
 <p>
 
 <H1 align=center><font size=+4>Kevin Knight</font></H1>
@@ -23,7 +22,7 @@ document.write("kevin.crawfor"+"d.knight@gm"+"ail.com")
 </P>
 
 <p>
-Recent positions: Chief Scientist for NLP (Didi), Professor of Computer Science (USC).
+Recent positions: Chief Scientist for NLP (Didi Global), Professor of Computer Science (USC).
 
 <P>
 Research interests include: artificial intelligence, natural language 
@@ -59,6 +58,10 @@ Co-organized IWSLT 2020, co-Program Chair of First <a href="http://aacl2020.org/
  
 <p>
 <A HREF="alexa-and-moxie-talking.MP4">Alexa talking to Moxie</A>.
+</p>
+
+<p>
+<A HREF="pics-cooking">Chez Lockdown</A>.
 </p>
 
 <p>
