Modifying the site

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Co-organized IWSLT 2020, co-Program Chair of First <a href="http://aacl2020.org/
 </p>
 
 <p>
-<A HREF="pics-cooking">Chez Lockdown</A>.
+<A HREF="pics-cooking">Lockdown food</A> and <A HREF="pics-ballona">view from a bridge</A>.
 </p>
 
 <p>
