--- a/pics-ballona.html
+++ b/pics-ballona.html
@@ -99,7 +99,74 @@ img {vertical-align: middle;}
 
 <div class="slideshow-container">
 
-<div class="mySlides fade"> <div class="numbertext">1 / 86</div> <img src="pics-ballona/IMG_1078.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">1 / 86</div> <img src="pics-ballona/01.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">2 / 86</div> <img src="pics-ballona/02.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">3 / 86</div> <img src="pics-ballona/03.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">4 / 86</div> <img src="pics-ballona/04.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">5 / 86</div> <img src="pics-ballona/05.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">6 / 86</div> <img src="pics-ballona/06.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">7 / 86</div> <img src="pics-ballona/07.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">8 / 86</div> <img src="pics-ballona/08.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">9 / 86</div> <img src="pics-ballona/09.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">10 / 86</div> <img src="pics-ballona/10.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">11 / 86</div> <img src="pics-ballona/11.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">12 / 86</div> <img src="pics-ballona/12.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">13 / 86</div> <img src="pics-ballona/13.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">14 / 86</div> <img src="pics-ballona/14.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">15 / 86</div> <img src="pics-ballona/15.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">16 / 86</div> <img src="pics-ballona/16.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">17 / 86</div> <img src="pics-ballona/17.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">18 / 86</div> <img src="pics-ballona/18.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">19 / 86</div> <img src="pics-ballona/19.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">20 / 86</div> <img src="pics-ballona/1.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">21 / 86</div> <img src="pics-ballona/20.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">22 / 86</div> <img src="pics-ballona/21.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">23 / 86</div> <img src="pics-ballona/22.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">24 / 86</div> <img src="pics-ballona/23.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">25 / 86</div> <img src="pics-ballona/24.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">26 / 86</div> <img src="pics-ballona/25.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">27 / 86</div> <img src="pics-ballona/26.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">28 / 86</div> <img src="pics-ballona/27.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">29 / 86</div> <img src="pics-ballona/28.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">30 / 86</div> <img src="pics-ballona/29.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">31 / 86</div> <img src="pics-ballona/30.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">32 / 86</div> <img src="pics-ballona/31.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">33 / 86</div> <img src="pics-ballona/32.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">34 / 86</div> <img src="pics-ballona/33.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">35 / 86</div> <img src="pics-ballona/34.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">36 / 86</div> <img src="pics-ballona/35.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">37 / 86</div> <img src="pics-ballona/36.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">38 / 86</div> <img src="pics-ballona/37.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">39 / 86</div> <img src="pics-ballona/38.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">40 / 86</div> <img src="pics-ballona/39.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">41 / 86</div> <img src="pics-ballona/40.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">42 / 86</div> <img src="pics-ballona/41.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">43 / 86</div> <img src="pics-ballona/42.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">44 / 86</div> <img src="pics-ballona/43.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">45 / 86</div> <img src="pics-ballona/44.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">46 / 86</div> <img src="pics-ballona/45.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">47 / 86</div> <img src="pics-ballona/46.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">48 / 86</div> <img src="pics-ballona/47.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">49 / 86</div> <img src="pics-ballona/48.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">50 / 86</div> <img src="pics-ballona/49.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">51 / 86</div> <img src="pics-ballona/50.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">52 / 86</div> <img src="pics-ballona/51.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">53 / 86</div> <img src="pics-ballona/52.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">54 / 86</div> <img src="pics-ballona/53.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">55 / 86</div> <img src="pics-ballona/54.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">56 / 86</div> <img src="pics-ballona/55.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">57 / 86</div> <img src="pics-ballona/56.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">58 / 86</div> <img src="pics-ballona/57.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">59 / 86</div> <img src="pics-ballona/58.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">60 / 86</div> <img src="pics-ballona/59.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">61 / 86</div> <img src="pics-ballona/60.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">62 / 86</div> <img src="pics-ballona/61.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">63 / 86</div> <img src="pics-ballona/62.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">64 / 86</div> <img src="pics-ballona/63.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">65 / 86</div> <img src="pics-ballona/64.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">66 / 86</div> <img src="pics-ballona/65.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">67 / 86</div> <img src="pics-ballona/66.jpg" style="width:100%"> </div>
+<div class="mySlides fade"> <div class="numbertext">68 / 86</div> <img src="pics-ballona/67.jpg" style="width:100%"> </div>
 
 <a class="prev" onclick="plusSlides(-1)">❮</a>
 <a class="next" onclick="plusSlides(1)">❯</a>
