Modifying the site

--- a/pics-paintings.html
+++ b/pics-paintings.html
@@ -108,7 +108,7 @@ img {vertical-align: middle;}
 <div class="mySlides fade"> <div class="numbertext">7 / 150</div> <img src="pics-paintings/bad-grammar-30x30.jpg" style="width:100%"> <div class="text">bad-grammar 30x30</div> </div>
 <div class="mySlides fade"> <div class="numbertext">8 / 150</div> <img src="pics-paintings/bar-24x33.jpg" style="width:100%"> <div class="text">bar 24x33</div> </div>
 <div class="mySlides fade"> <div class="numbertext">9 / 150</div> <img src="pics-paintings/big-brother-36x24.jpg" style="width:100%"> <div class="text">big-brother 36x24</div> </div>
-<div class="mySlides fade"> <div class="numbertext">10 / 150</div> <img src="pics-paintings/bikes-36x36.JPG" style="width:100%"> <div class="text">bikes 36x36.JPG</div> </div>
+<div class="mySlides fade"> <div class="numbertext">10 / 150</div> <img src="pics-paintings/bikes-36x36.JPG" style="width:100%"> <div class="text">bikes 36x36</div> </div>
 <div class="mySlides fade"> <div class="numbertext">11 / 150</div> <img src="pics-paintings/bizarre-coincidences-24x36.jpg" style="width:100%"> <div class="text">bizarre-coincidences 24x36</div> </div>
 <div class="mySlides fade"> <div class="numbertext">12 / 150</div> <img src="pics-paintings/boba-fett-30x40.jpg" style="width:100%"> <div class="text">boba-fett 30x40</div> </div>
 <div class="mySlides fade"> <div class="numbertext">13 / 150</div> <img src="pics-paintings/but-you-could-36x36.jpg" style="width:100%"> <div class="text">but-you-could 36x36</div> </div>
@@ -118,14 +118,14 @@ img {vertical-align: middle;}
 <div class="mySlides fade"> <div class="numbertext">17 / 150</div> <img src="pics-paintings/chess1-36x36.jpg" style="width:100%"> <div class="text">chess1 36x36</div> </div>
 <div class="mySlides fade"> <div class="numbertext">18 / 150</div> <img src="pics-paintings/chess2-36x36.jpg" style="width:100%"> <div class="text">chess2 36x36</div> </div>
 <div class="mySlides fade"> <div class="numbertext">19 / 150</div> <img src="pics-paintings/chess3-36x36.jpg" style="width:100%"> <div class="text">chess3 36x36</div> </div>
-<div class="mySlides fade"> <div class="numbertext">20 / 150</div> <img src="pics-paintings/close-up-28x22.png" style="width:100%"> <div class="text">close-up 28x22.png</div> </div>
+<div class="mySlides fade"> <div class="numbertext">20 / 150</div> <img src="pics-paintings/close-up-28x22.png" style="width:100%"> <div class="text">close-up 28x22</div> </div>
 <div class="mySlides fade"> <div class="numbertext">21 / 150</div> <img src="pics-paintings/collatz-conjecture-60x40.jpg" style="width:100%"> <div class="text">collatz-conjecture 60x40</div> </div>
 <div class="mySlides fade"> <div class="numbertext">22 / 150</div> <img src="pics-paintings/consistency-of-arithmetic-48x24.jpg" style="width:100%"> <div class="text">consistency-of-arithmetic-48x24</div> </div>
 <div class="mySlides fade"> <div class="numbertext">23 / 150</div> <img src="pics-paintings/cool-britannia-40x30.jpg" style="width:100%"> <div class="text">cool-britannia 40x30</div> </div>
 <div class="mySlides fade"> <div class="numbertext">24 / 150</div> <img src="pics-paintings/copiale-cipher-36x36.jpg" style="width:100%"> <div class="text">copiale-cipher 36x36</div> </div>
 <div class="mySlides fade"> <div class="numbertext">25 / 150</div> <img src="pics-paintings/coprime-36x36.jpg" style="width:100%"> <div class="text">coprime 36x36</div> </div>
 <div class="mySlides fade"> <div class="numbertext">26 / 150</div> <img src="pics-paintings/cosmic-surf-30x30.jpg" style="width:100%"> <div class="text">cosmic-surf 30x30</div> </div>
-<div class="mySlides fade"> <div class="numbertext">27 / 150</div> <img src="pics-paintings/crawford1-28x22.png" style="width:100%"> <div class="text">crawford1 28x22.png</div> </div>
+<div class="mySlides fade"> <div class="numbertext">27 / 150</div> <img src="pics-paintings/crawford1-28x22.png" style="width:100%"> <div class="text">crawford1 28x22</div> </div>
 <div class="mySlides fade"> <div class="numbertext">28 / 150</div> <img src="pics-paintings/crawford2-30x30.jpg" style="width:100%"> <div class="text">crawford2 30x30</div> </div>
 <div class="mySlides fade"> <div class="numbertext">29 / 150</div> <img src="pics-paintings/crawford3-28x22.jpg" style="width:100%"> <div class="text">crawford3 28x22</div> </div>
 <div class="mySlides fade"> <div class="numbertext">30 / 150</div> <img src="pics-paintings/crossword-30x30.jpg" style="width:100%"> <div class="text">crossword 30x30</div> </div>
@@ -178,7 +178,7 @@ img {vertical-align: middle;}
 <div class="mySlides fade"> <div class="numbertext">77 / 150</div> <img src="pics-paintings/lime-30x30.jpg" style="width:100%"> <div class="text">lime 30x30</div> </div>
 <div class="mySlides fade"> <div class="numbertext">78 / 150</div> <img src="pics-paintings/lisbon-36x36.jpg" style="width:100%"> <div class="text">lisbon 36x36</div> </div>
 <div class="mySlides fade"> <div class="numbertext">79 / 150</div> <img src="pics-paintings/maga-30x40.jpg" style="width:100%"> <div class="text">maga 30x40</div> </div>
-<div class="mySlides fade"> <div class="numbertext">80 / 150</div> <img src="pics-paintings/mao-20x40.png" style="width:100%"> <div class="text">mao 20x40.png</div> </div>
+<div class="mySlides fade"> <div class="numbertext">80 / 150</div> <img src="pics-paintings/mao-20x40.png" style="width:100%"> <div class="text">mao 20x40</div> </div>
 <div class="mySlides fade"> <div class="numbertext">81 / 150</div> <img src="pics-paintings/mars-30x30.jpg" style="width:100%"> <div class="text">mars 30x30</div> </div>
 <div class="mySlides fade"> <div class="numbertext">82 / 150</div> <img src="pics-paintings/millenial-30x30.jpg" style="width:100%"> <div class="text">millenial 30x30</div> </div>
 <div class="mySlides fade"> <div class="numbertext">83 / 150</div> <img src="pics-paintings/mission-accomplished-12x12.jpg" style="width:100%"> <div class="text">mission-accomplished 12x12</div> </div>
@@ -214,8 +214,8 @@ img {vertical-align: middle;}
 <div class="mySlides fade"> <div class="numbertext">113 / 150</div> <img src="pics-paintings/snowden-28x22.jpg" style="width:100%"> <div class="text">snowden 28x22</div> </div>
 <div class="mySlides fade"> <div class="numbertext">114 / 150</div> <img src="pics-paintings/snowprints-30x30.jpg" style="width:100%"> <div class="text">snowprints 30x30</div> </div>
 <div class="mySlides fade"> <div class="numbertext">115 / 150</div> <img src="pics-paintings/socal-40x30.jpg" style="width:100%"> <div class="text">socal 40x30</div> </div>
-<div class="mySlides fade"> <div class="numbertext">116 / 150</div> <img src="pics-paintings/spider-monkey-layer-30x30.png" style="width:100%"> <div class="text">spider-monkey-layer 30x30.png</div> </div>
-<div class="mySlides fade"> <div class="numbertext">117 / 150</div> <img src="pics-paintings/star-wars-is-pretty-good-30x30.JPG" style="width:100%"> <div class="text">star-wars-is-pretty-good 30x30.JPG</div> </div>
+<div class="mySlides fade"> <div class="numbertext">116 / 150</div> <img src="pics-paintings/spider-monkey-layer-30x30.png" style="width:100%"> <div class="text">spider-monkey-layer 30x30</div> </div>
+<div class="mySlides fade"> <div class="numbertext">117 / 150</div> <img src="pics-paintings/star-wars-is-pretty-good-30x30.JPG" style="width:100%"> <div class="text">star-wars-is-pretty-good 30x30</div> </div>
 <div class="mySlides fade"> <div class="numbertext">118 / 150</div> <img src="pics-paintings/statue-36x36.jpg" style="width:100%"> <div class="text">statue 36x36</div> </div>
 <div class="mySlides fade"> <div class="numbertext">119 / 150</div> <img src="pics-paintings/stop-consuming-36x36.jpg" style="width:100%"> <div class="text">stop-consuming 36x36</div> </div>
 <div class="mySlides fade"> <div class="numbertext">120 / 150</div> <img src="pics-paintings/stop-losing-war-36x36.jpg" style="width:100%"> <div class="text">stop-losing-war 36x36</div> </div>
@@ -230,9 +230,9 @@ img {vertical-align: middle;}
 <div class="mySlides fade"> <div class="numbertext">129 / 150</div> <img src="pics-paintings/tiger-12x36.jpg" style="width:100%"> <div class="text">tiger 12x36</div> </div>
 <div class="mySlides fade"> <div class="numbertext">130 / 150</div> <img src="pics-paintings/touareg-36x18.jpg" style="width:100%"> <div class="text">touareg 36x18</div> </div>
 <div class="mySlides fade"> <div class="numbertext">131 / 150</div> <img src="pics-paintings/train-36x36.jpg" style="width:100%"> <div class="text">train 36x36</div> </div>
-<div class="mySlides fade"> <div class="numbertext">132 / 150</div> <img src="pics-paintings/tyler-40x30.png" style="width:100%"> <div class="text">tyler 40x30.png</div> </div>
+<div class="mySlides fade"> <div class="numbertext">132 / 150</div> <img src="pics-paintings/tyler-40x30.png" style="width:100%"> <div class="text">tyler 40x30</div> </div>
 <div class="mySlides fade"> <div class="numbertext">133 / 150</div> <img src="pics-paintings/uav-30x30.jpg" style="width:100%"> <div class="text">uav 30x30</div> </div>
-<div class="mySlides fade"> <div class="numbertext">134 / 150</div> <img src="pics-paintings/use-social-media-30x40.png" style="width:100%"> <div class="text">use-social-media 30x40.png</div> </div>
+<div class="mySlides fade"> <div class="numbertext">134 / 150</div> <img src="pics-paintings/use-social-media-30x40.png" style="width:100%"> <div class="text">use-social-media 30x40</div> </div>
 <div class="mySlides fade"> <div class="numbertext">135 / 150</div> <img src="pics-paintings/veni-vidi-vici-36x36.jpg" style="width:100%"> <div class="text">veni-vidi-vici 36x36</div> </div>
 <div class="mySlides fade"> <div class="numbertext">136 / 150</div> <img src="pics-paintings/wait-what1-12x12.jpg" style="width:100%"> <div class="text">wait-what1 12x12</div> </div>
 <div class="mySlides fade"> <div class="numbertext">137 / 150</div> <img src="pics-paintings/wait-what2-12x12.jpg" style="width:100%"> <div class="text">wait-what2 12x12</div> </div>
