Modifying the site

--- a/pics-paintings.html
+++ b/pics-paintings.html
@@ -113,7 +113,7 @@ img {vertical-align: middle;}
 <div class="mySlides fade"> <div class="numbertext">12 / 150</div> <img src="pics-paintings/boba-fett-30x40.jpg" style="width:100%"> <div class="text">boba-fett 30x40</div> </div>
 <div class="mySlides fade"> <div class="numbertext">13 / 150</div> <img src="pics-paintings/but-you-could-36x36.jpg" style="width:100%"> <div class="text">but-you-could 36x36</div> </div>
 <div class="mySlides fade"> <div class="numbertext">14 / 150</div> <img src="pics-paintings/catch-up-with-or-surpass-uk-40x30.jpg" style="width:100%"> <div class="text">catch-up-with-or-surpass-uk 40x30</div> </div>
-<div class="mySlides fade"> <div class="numbertext">15 / 150</div> <img src="pics-paintings/alien-farmers-28x22.jpg" style="width:100%"> <div class="text">alien-farmersj28x22</div> </div>
+<div class="mySlides fade"> <div class="numbertext">15 / 150</div> <img src="pics-paintings/alien-farmers-28x22.jpg" style="width:100%"> <div class="text">alien-farmers 28x22</div> </div>
 <div class="mySlides fade"> <div class="numbertext">16 / 150</div> <img src="pics-paintings/cheers-30x24.jpg" style="width:100%"> <div class="text">cheers 30x24</div> </div>
 <div class="mySlides fade"> <div class="numbertext">17 / 150</div> <img src="pics-paintings/chess1-36x36.jpg" style="width:100%"> <div class="text">chess1 36x36</div> </div>
 <div class="mySlides fade"> <div class="numbertext">18 / 150</div> <img src="pics-paintings/chess2-36x36.jpg" style="width:100%"> <div class="text">chess2 36x36</div> </div>
