Modifying the site

--- a/index.html
+++ b/index.html
@@ -1271,6 +1271,4 @@ Surveys, 21(1), 1989.
 
 <HR>
 
-Been doing some painting:
-<IMG ALIGN=TOP SRC="pictures/picture-movie.gif">
-
+Been doing some <A HREF="pics-paintings">painting</A>.
