--- a/pics-test.html
+++ b/pics-test.html
@@ -99,10 +99,10 @@ img {vertical-align: middle;}
 
 <div class="slideshow-container">
 
-<div class="mySlides fade"> <div class="numbertext">1 / 150</div> <img src="pics-paintings/friend-28x22.jpg" > <div class="text">friend 28x22</div> </div>
-<div class="mySlides fade"> <div class="numbertext">2 / 150</div> <img src="pics-paintings/cat-searching-30x30.jpg" > <div class="text">cat-searching 30x30</div> </div>
-<div class="mySlides fade"> <div class="numbertext">3 / 150</div> <img src="pics-paintings/go-60x60.jpg" > <div class="text">go 60x60</div> </div>
-<div class="mySlides fade"> <div class="numbertext">4 / 150</div> <img src="pics-paintings/automaton-20x30.jpg" > <div class="text">automaton 20x30</div> </div>
+<div class="mySlides fade"> <div class="numbertext">1 / 150</div> <img src="pics-paintings/friend-28x22.jpg" style="width:100%"> <div class="text">friend 28x22</div> </div>
+<div class="mySlides fade"> <div class="numbertext">2 / 150</div> <img src="pics-paintings/cat-searching-30x30.jpg" style="width:100%"> <div class="text">cat-searching 30x30</div> </div>
+<div class="mySlides fade"> <div class="numbertext">3 / 150</div> <img src="pics-paintings/go-60x60.jpg" style="width:100%"> <div class="text">go 60x60</div> </div>
+<div class="mySlides fade"> <div class="numbertext">4 / 150</div> <img src="pics-paintings/automaton-20x30.jpg" style="width:100%"> <div class="text">automaton 20x30</div> </div>
 <div class="mySlides fade"> <div class="numbertext">5 / 150</div> <img src="pics-paintings/aztecs-30x40.jpg" style="width:100%"> <div class="text">aztecs 30x40</div> </div>
 
 <a class="prev" onclick="plusSlides(-1)">❮</a>
